Sorting things, e.g. CSS code and nav links colour
Checking all HTML files to sort out a few things with changed/moved CSS:
• remove the old CSS code that's now part of a linked external stylesheet file for all pages
• remove old background colours of active navigation links (see my comment) and add body tag styles
• find any more files that use your old Github username so need to be updated (hyperlinks)
• update a few old tags that I know aren't supported in HTML5 and fix small problems
My comment: https://github.com/Magnogen/magnogen.github.io/pull/2#issuecomment-343754985

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>
@@ -10,9 +11,6 @@
   			background-color: #222222;
   			color: #EEEEEE;
   			font-family: Verdana, sans-serif;
-		}
-		.active {
-			background-color: #0033cc
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
@@ -34,15 +32,14 @@
 				</a>
 			</li>
 		</ul>
-		<center>
+		<div style="text-align: center;">
 			<h1>
-				<br>
-				Magnogen / hydronesium
+				<br>Magnogen / hydronesium
 			</h1>
-    			<p>
+    			<p></p>
 			<h3>
 				Provideing cool stuf since we lerned how to spell.
 			</h3>
-		</center>
+		</div>
 	</body>
 </html>
