Sorting things, e.g. CSS code and nav links colour
Checking all HTML files to sort out a few things with changed/moved CSS:
• remove the old CSS code that's now part of a linked external stylesheet file for all pages
• remove old background colours of active navigation links (see my comment) and add body tag styles
• find any more files that use your old Github username so need to be updated (hyperlinks)
• update a few old tags that I know aren't supported in HTML5 and fix small problems
My comment: https://github.com/Magnogen/magnogen.github.io/pull/2#issuecomment-343754985

--- a/edu/index.html
+++ b/edu/index.html
@@ -1,42 +1,18 @@
+<!DOCTYPE html>
 <html>
   	<head>
-		  <title>
-			  hydronesium - hydredu
-		  </title>
+		<title>
+			Magnogen - hydredu
+		</title>
+		<link rel="icon" href="http://magnogen.github.io/H.png">
 	</head>
 	<style>
 		body {
-			background-color: #222222;
-			color: #eeeeee;
-			font-family: Verdana, sans-serif;
+  			background-color: #222222;
+  			color: #EEEEEE;
+  			font-family: Verdana, sans-serif;
 		}
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333333;
-			position: fixed;
-			top: 0;
-			width: 100%;
-		}
-		li {
-		    	float: left;
-		}
-		li a {
-		    	display: block;
-		    	color: white;
-		    	text-align: center;
-		    	padding: 14px 16px;
-		    	text-decoration: none;
-		}
-		li a:hover:not(.active) {
-		    	background-color: #111111;
-		}
-		.active {
-		    	background-color: #4CAF50;
-		}
-		.sub {
+		.sub_menu {// Sub-menu on this page.
 			list-style-type: none;
 			margin: 0;
 			padding: 0;
@@ -47,6 +23,7 @@
 			width: 100%;
 		}
 	</style>
+	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
 		<ul>
   			<li>
@@ -65,21 +42,20 @@
 				</a>
 			</li>
 		</ul>
-		<ul class="sub">
+		<ul class="sub_menu">
   			<li>
 				<a href="https://magnogen.github.io/hydredu/Bio/">
 					Biology
 				</a>
 			</li>
 		</ul>
-
-		<center>
-				<h1>
-					Education
-				</h1>
-				<h3>
-					Click a hyperlink above to see other, closely linked, pages.
-				</h3>
-		</center>
+		<div style="text-align: center;">
+			<h1>
+				Education <i>(older pages)</i>
+			</h1>
+			<h3>
+				Click a hyperlink above to see other, closely linked, pages.
+			</h3>
+		</div>
 	</body>
 </html>
