Sorting things, e.g. CSS code and nav links colour
Checking all HTML files to sort out a few things with changed/moved CSS:
• remove the old CSS code that's now part of a linked external stylesheet file for all pages
• remove old background colours of active navigation links (see my comment) and add body tag styles
• find any more files that use your old Github username so need to be updated (hyperlinks)
• update a few old tags that I know aren't supported in HTML5 and fix small problems
My comment: https://github.com/Magnogen/magnogen.github.io/pull/2#issuecomment-343754985

--- a/QandA/index.html
+++ b/QandA/index.html
@@ -1,71 +1,69 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      Q&A
-    </title>
-  </head>
-  <style>
-  body {
-    background-color: #222222;
-    color: #EEEEEE;
-    font-family: Verdana, sans-serif;
-  }
-  .active {
-  background-color: #0033cc
-  }
-</style>
-<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
-  <body>
+	<head>
+		<title>
+			Magnogen - Q&amp;A section
+		</title>
+		<link rel="icon" href="http://magnogen.github.io/H.png">
+	</head>
+	<style>
+		body {
+  			background-color: #222222;
+  			color: #EEEEEE;
+  			font-family: Verdana, sans-serif;
+		}
+		/* Note: the class "Q" below has no styles. */
+	</style>
+	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
+	<body>
 		<ul>
-  			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/">
+			<li>
+				<a class="active" href="https://magnogen.github.io/">
 					Home
 				</a>
 			</li>
 			<li>
-				<a href="https://hydronesiumscratch.github.io/contributors/">
+				<a href="https://magnogen.github.io/contributors/">
 					Contributors
 				</a>
 			</li>
-  			<li>
-				<a href="https://hydronesiumscratch.github.io/hydredu/">
-					hydreducation
-				</a>
-			</li>
-  			<li>
-				<a href="https://hydronesiumscratch.github.io/Game/">
-					Flappy square
+			<li>
+				<a href="https://magnogen.github.io/edu/">
+					Education
 				</a>
 			</li>
 		</ul>
-		<center>
+		<div style="text-align: center;">
 			<h1>
-				<br>
-				Q&A section
+				<br>Questions &amp; Answers section
 			</h1>
-		</center>
-	  <p>
-	<h3>
-		<div class="Q">
-			What programming languages did you use to make this website? And which one do you think is easier to code in?
 		</div>
-		I used HTML, CSS and JavaScript. (Especially JavaScript for the 'Flappy square' game)<br>
-		Hmmm... I think that HTML has lots of quick and easy-to-use tags, but I'm gonna have to go with CSS to be the easiest language to code in.
-		<p>
-		
-		<div class="Q">
+		<p></p>
+		<h3>
+			<div class="Q">
+			What programming languages did you use to make this website?<br>
+			Also, which one do you think is easier to code in?
+			</div>
+			I used HTML, CSS and JavaScript - mainly JavaScript for the 'Flappy square' game)<br>
+			Hmmm... I think that HTML has lots of quick and easy-to-use tags but<br>
+			I'm gonna have to go with CSS to be the easiest language to code in.
+		<p></p>
+			<div class="Q">
 			What is your favourite programming language in general?
-		</div>
-    When I saw this question, I thought to myself "Oh no! They asked the unanswerable 'favourite' question! What am I going to do now?". So, in other words, all of the ones I know (including: Scratch, Python, CSS, HTML, Batch files, along with many others...) because I think that all programming languages are good and special in their own way.
-    <br>
-    Just having looked at what I just wrote, I feel so cringey.
-    <p>
-    
-    <div class="Q">
-      Who are you?
-    </div>
-    I am hydronesium. I am saying my username because I am very protective about sharing personal details on the internet. And also I don't want identity-frauders to steal who I am... (Note to those people: "Haha! You can't catch me!")
-    <p>
-    </h3>
-  </body>
+			</div>
+			When I saw this question, I thought to myself "Oh no! They asked the<br>
+			unanswerable 'favourite' question! What am I going to do now?".<br>
+			So, in other words, all of the ones I know - including:
+			Scratch, Python, CSS, HTML, Batch files, as well as many others...<br>
+			because I think that all programming languages are good and special in their own way.
+			<br>
+			<i>Looking back at what I just wrote, I feel so cringy.</i>
+		<p></p>
+			<div class="Q">Who are you?</div>
+			I am hydronesium/Magnogen.
+			I have only said my username because I am protective about sharing<br>
+			personal details on the internet. And also I don't want identity-frauders<br>
+			to steal who I am... (Note to those people: "Haha! You can't catch me!")
+		</h3>
+	</body>
 </html>
