Sorting things, e.g. CSS code and nav links colour
Checking all HTML files to sort out a few things with changed/moved CSS:
• remove the old CSS code that's now part of a linked external stylesheet file for all pages
• remove old background colours of active navigation links (see my comment) and add body tag styles
• find any more files that use your old Github username so need to be updated (hyperlinks)
• update a few old tags that I know aren't supported in HTML5 and fix small problems
My comment: https://github.com/Magnogen/magnogen.github.io/pull/2#issuecomment-343754985

--- a/CompSci/index.html
+++ b/CompSci/index.html
@@ -1,36 +1,30 @@
-<style>
-  .3d {
-    perspective: 600px;
-    rotateY(30);
-  }
-	body {
-  		background-color: #222222;
-  		color: #EEEEEE;
-  		font-family: Verdana, sans-serif;
-	}
-	.active {
-		background-color: #0033cc
-	}
-</style>
-<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
-
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      Computer science revision
-    </title>
-  </head>
-  <body>
-    <center>
-      <div class="3d">
-        <b>
-          Data
-        </b>
-        <p>
-        What is binary?<br>
-        Binary is needed to represent data and program instructions because<br>
-        of the way in which computers work.
-      </div>
-    </center>
-  </body>
+    <head>
+        <title>Computer science revision - Magnogen</title>
+        <link rel="icon" href="http://magnogen.github.io/H.png">
+        <style>
+        body {
+            background-color: #222222;
+            color: #EEEEEE;
+            font-family: Verdana, sans-serif;
+        }
+        .zaxis {//Class names can't start with numbers.
+            perspective: 600px;
+            rotateY(30);
+        }
+        </style>
+        <link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
+    </head>
+    <body>
+        <div style="text-align: center;">
+            <div class="zaxis">
+                <b>Data</b>
+                <p></p>
+                What is binary?<br>
+                Binary is needed to represent data and program instructions
+                <br>because of the way in which computers work.
+            </div>
+        </div>
+    </body>
 </html>
