Sorting things - a few changes to this small file
Checking all HTML files to sort out a few things with changed/moved CSS:
• remove the old CSS code that's now part of a linked external stylesheet file for all pages
• remove old background colours of active navigation links (see my comment) and add body tag styles
• find any more files that use your old Github username so need to be updated (hyperlinks)
• update a few old tags that I know aren't supported in HTML5 and fix small problems
My comment: https://github.com/Magnogen/magnogen.github.io/pull/2#issuecomment-343754985

--- a/RennApps/index.html
+++ b/RennApps/index.html
@@ -1,11 +1,18 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>
-      Renn Apps
-    </title>
-  </head>
-  <body>
-    <script src=Form.js>
-    </script>
-  </body>
+    <head>
+        <title>Renn Apps</title>
+        <link rel="icon" href="http://magnogen.github.io/H.png">
+        <style>
+            body {
+                background-color: #222222;
+                color: #EEEEEE;
+                font-family: Verdana, sans-serif;
+            }
+        </style>
+        <link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
+    </head>
+    <body>
+        <script src="Form.js"></script>
+    </body>
 </html>
