Sorting things but not much on this one. 9 unchecked HTML files left (file finder)
Checking all HTML files to sort out a few things with changed/moved CSS:
• remove the old CSS code that's now part of a linked external stylesheet file for all pages
• remove old background colours of active navigation links (see my comment) and add body tag styles
• find any more files that use your old Github username so need to be updated (hyperlinks)
• update a few old tags that I know aren't supported in HTML5 and fix small problems
My comment: https://github.com/Magnogen/magnogen.github.io/pull/2#issuecomment-343754985

--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -1,2 +1,44 @@
+<!DOCTYPE html>
 <html>
+	<head>
+		<title>
+			Magnogen - Downloads
+		</title>
+		<link rel="icon" href="http://magnogen.github.io/H.png">
+	</head>
+	<style>
+		body {
+  			background-color: #222222;
+  			color: #EEEEEE;
+  			font-family: Verdana, sans-serif;
+		}
+	</style>
+	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
+	<body>
+		<ul>
+			<li>
+				<a class="active" href="https://magnogen.github.io/">
+					Home
+				</a>
+			</li>
+			<li>
+				<a href="https://magnogen.github.io/contributors/">
+					Contributors
+				</a>
+			</li>
+			<li>
+				<a href="https://magnogen.github.io/edu/">
+					Education
+				</a>
+			</li>
+		</ul>
+		<div style="text-align: center;">
+			<h1>
+				<br>Downloads page
+			</h1>
+			<h3>
+				...content...
+			</h3>
+		</div>
+	</body>
 </html>
