--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -15,23 +15,7 @@
 	</style>
 	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
-		<ul>
-			<li>
-				<a class="active" href="https://magnogen.github.io/">
-					Home
-				</a>
-			</li>
-			<li>
-				<a href="https://magnogen.github.io/contributors/">
-					Contributors
-				</a>
-			</li>
-			<li>
-				<a href="https://magnogen.github.io/edu/">
-					Education
-				</a>
-			</li>
-		</ul>
+		<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
 		<div style="text-align: center;">
 			<h1>
 				<br>Downloads page
