--- a/CompSci/index.html
+++ b/CompSci/index.html
@@ -17,6 +17,7 @@
         <link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
     </head>
     <body>
+        <link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
         <div style="text-align: center;">
             <div class="zaxis">
                 <b>Data</b>
