--- a/RennApps/index.html
+++ b/RennApps/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
     </head>
     <body>
+        <link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
         <script src="Form.js"></script>
     </body>
 </html>
