--- a/contributors/hydronesium.html
+++ b/contributors/hydronesium.html
@@ -27,23 +27,7 @@
 	</style>
 	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
-		<ul>
-			<li>
-				<a href="https://magnogen.github.io/">
-					Home
-				</a>
-			</li>
-			<li>
-				<a class="active" href="https://magnogen.github.io/contributors/">
-					Contributors
-				</a>
-			</li>
-			<li>
-				<a href="https://magnogen.github.io/hydredu/">
-					hydreducation
-				</a>
-			</li>
-		</ul>
+		<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
 		<div style="text-align: center;">
 			<h1>
 				<br>Contributors
