--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -55,28 +55,7 @@
 		}
 	</style>
 	<body>
-		<ul>
-			<li>
-				<a href="https://hydronesiumscratch.github.io/">
-					Home
-				</a>
-			</li>
-			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/contributors/">
-					Contributors
-				</a>
-			</li>
-			<li>
-				<a href="https://hydronesiumscratch.github.io/hydredu/">
-					hydreducation
-				</a>
-			</li>
-			<li>
-				<a href="https://hydronesiumscratch.github.io/Game/">
-					Flappy square
-				</a>
-			</li>
-		</ul>
+		<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
 		<div style="text-align: center;">
 			<h1>
 				<br>Contributors
