--- a/edu/index.html
+++ b/edu/index.html
@@ -25,23 +25,7 @@
 	</style>
 	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
-		<ul>
-  			<li>
-				<a href="https://magnogen.github.io/">
-					Home
-				</a>
-			</li>
-			<li>
-				<a href="https://magnogen.github.io/contributors/">
-					Contributors
-				</a>
-			</li>
-  			<li>
-				<a class="active" href="https://magnogen.github.io/edu/">
-					Education
-				</a>
-			</li>
-		</ul>
+		<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
 		<ul class="sub_menu">
   			<li>
 				<a href="https://magnogen.github.io/hydredu/Bio/">
