--- a/scratchblocks/index.html
+++ b/scratchblocks/index.html
@@ -38,34 +38,7 @@
 		}
 	</style>
 	<body>
-		<ul>
-  			<li>
-				<a class="active" href="https://hydronesiumscratch.github.io/">
-					Home
-				</a>
-			</li>
-			<li>
-				<a href="https://hydronesiumscratch.github.io/contributors/">
-					Contributors
-				</a>
-			</li>
-  			<li>
-				<a href="https://hydronesiumscratch.github.io/hydredu/">
-					hydreducation
-				</a>
-			</li>
-  			<li>
-				<a href="https://hydronesiumscratch.github.io/Game/">
-					Flappy square
-				</a>
-			</li>
-			</li>
-  			<li>
-				<a href="https://hydronesiumscratch.github.io/Game/">
-					Scratchblocks
-				</a>
-			</li>
-		</ul>
+		<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
 		<center>
 			<h1>
 				<br>
