--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
   			font-family: Verdana, sans-serif;
 		}
 	</style>
-	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
+	<script src="https://www.w3schools.com/lib/w3.js"></script>
+	<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
+
+	<script>
+		w3.includeHTML();
+	</script>
 	<body>
 		<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
 		<div style="text-align: center;">
