Tidy/sort out better way to include nav-bar code
Sorted out and tidied the newer method for including the navigation bar code
on all pages from a separate file. More things to fix are described on my pull request
https://github.com/user-e/magnogen.github.io-code-edits/pull/12.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 			Magnogen - Home
 		</title>
 		<link rel="icon" href="http://magnogen.github.io/H.png">
+		<!-- JavaScript library which gets the nav-bar content. -->
+		<script src="https://www.w3schools.com/lib/w3.js"></script>
 	</head>
 	<style>
 		body {
@@ -13,14 +15,10 @@
   			font-family: Verdana, sans-serif;
 		}
 	</style>
-	<script src="https://www.w3schools.com/lib/w3.js"></script>
-	<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
-
-	<script>
-		w3.includeHTML();
-	</script>
 	<body>
-		<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
+		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
+		<!--Don't use <link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">-->
+		<script> w3.includeHTML(); </script>
 		<div style="text-align: center;">
 			<h1>
 				<br>Magnogen / hydronesium
