Fix CSS after tidy better way to include nav-bar
Sorted out and tidied the newer method for including the navigation bar code
on all pages from a separate file. More things to fix are described on my pull request
user-e#12

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 			Magnogen - Home
 		</title>
 		<link rel="icon" href="http://magnogen.github.io/H.png">
+		<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
+		
 		<!-- JavaScript library which gets the nav-bar content. -->
 		<script src="https://www.w3schools.com/lib/w3.js"></script>
 	</head>
