Finish sorting things out - fixed whitespace
Also see https://github.com/user-e/magnogen.github.io-code-edits/pull/12#issuecomment-347008833 for some other information.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		</style>
 	</head>
 	<body>
-		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
+		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div>
 		<!--Don't use <link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">-->
 		<script> w3.includeHTML(); </script>
 		
@@ -27,10 +27,8 @@
 			<h1>
 				<br>Magnogen / hydronesium
 			</h1>
-    		<p></p>
-			<h3>
-				Provideing cool stuf since we lerned how to spell.
-			</h3>
+			<p></p>
+			<h3>Provideing cool stuf since we lerned how to spell.</h3>
 		</div>
 	</body>
 </html>
