--- a/edu/index.html
+++ b/edu/index.html
@@ -17,6 +17,7 @@
 				font-family: Verdana, sans-serif;
 			}
 			.sub_menu {// Sub-menu on this page.
+				float: none !important;
 				list-style-type: none;
 				margin: 0;
 				padding: 0;
