--- a/edu/index.html
+++ b/edu/index.html
@@ -16,12 +16,15 @@
 				color: #EEEEEE;
 				font-family: Verdana, sans-serif;
 			}
+			body>div>ul {
+				position: static;
+			}
 			.sub_menu {// Sub-menu on this page.
-				float: none !important;
 				list-style-type: none;
 				margin: 0;
 				padding: 0;
 				overflow: hidden;
+				position: initial;
 				background-color: #333333;
 				width: 100%;
 			}
