Improve the style on the hydredu page sub-menu

--- a/edu/index.html
+++ b/edu/index.html
@@ -16,17 +16,19 @@
 				color: #EEEEEE;
 				font-family: Verdana, sans-serif;
 			}
-			body>div>ul {
+			/*body>div>ul {
 				position: static;
-			}
+			}*/
 			.sub_menu {// Sub-menu on this page.
 				list-style-type: none;
 				margin: 0;
 				padding: 0;
 				overflow: hidden;
-				position: initial;
 				background-color: #333333;
-				width: 100%;
+				
+				position: relative;
+				left: 2em;
+				padding: 0 1.5em 0 1.5em;
 			}
 		</style>
 	</head>
