--- a/edu/index.html
+++ b/edu/index.html
@@ -26,9 +26,10 @@
 				overflow: hidden;
 				background-color: #333333;
 				
+				display: inline-block;
 				position: relative;
-				left: 2em;
-				padding: 0 1.5em 0 1.5em;
+				left: 2.5em;
+				border-top: 2px solid #111111;
 			}
 		</style>
 	</head>
