Add start of active nav-links code to navbar.html
I added the first piece of the active navigation bar hyperlinks code to the nav-bar file.
The code needed here is described at https://github.com/user-e/magnogen.github.io-code-edits/pull/12#issuecomment-347008833.
The call-back function option needs to be added to every page,
using the code "w3.includeHTML(nav_links_add_active);".
  <script>
    function nav_links_add_active () {
      // JavaScript call-back function, that "holds back" code
      // to run it after the "HTML includes" JS library has loaded
      // the nav-bar links content (this file) on a page.
      // The small piece of code finds any navigation hyperlinks
      // to the current page and gives them the "active" CSS style.
    };
  </script>

--- a/src/navbar.html
+++ b/src/navbar.html
@@ -16,4 +16,13 @@
       </a>
     </li>
   </ul>
+  <script>
+    function nav_links_add_active () {
+      // JavaScript call-back function, that "holds back" code
+      // to run it after the "HTML includes" JS library has loaded
+      // the nav-bar links content (this file) on a page.
+      // The small piece of code finds any navigation hyperlinks
+      // to the current page and gives them the "active" CSS style.
+    };
+  </script>
 </html>
