--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
 		</title>
 		<link rel="icon" href="http://magnogen.github.io/H.png">
 		<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
-		
 		<!-- JavaScript library which gets the nav-bar content. -->
-		<script src="https://www.w3schools.com/lib/w3.js"></script>
+		<script src="/src/includehtml.js"></script>
 		
 		<style>
 			body {
@@ -20,8 +19,7 @@
 	</head>
 	<body>
 		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div>
-		<!--Don't use <link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">-->
-		<script> w3.includeHTML(); </script>
+		<script> w3.includeHTML(nav_links_add_active); // Call-back function found in nav-bar file. </script>
 		
 		<div style="text-align: center;">
 			<h1>
