Fix temporary code to show the nav-bar error.

--- a/CompSci/index.html
+++ b/CompSci/index.html
@@ -32,7 +32,7 @@
                 <script> 
                         try {w3.includeHTML(nav_links_add_active); // Call-back function found in nav-bar file. 
                         } catch(err) {
-                                document.document.getElementsByClassName("p")[0].innerHTML = err.name+"<br>"+err.message;
+                                document.getElementsByClassName("p")[0].innerHTML = err.name+"<br>"+err.message;
                         }
 		</script>
                 
