--- a/CompSci/index.html
+++ b/CompSci/index.html
@@ -30,13 +30,15 @@
         <body>
                 <div w3-include-html="https://magnogen.github.io/src/navbar.html"></div>
                 <script> 
+			alert("any working JavaScript here?");
+			var code = document.createElement("pre");
+			code.innerHTML = document.documentElement.innerHTML.replace(/</g, "&lt;");
+			document.body.appendChild(code);
+			
                         try {w3.includeHTML(nav_links_add_active); // Call-back function found in nav-bar file. 
                         } catch(err) {
                                 document.getElementsByClassName("p")[0].innerHTML = err.name+"<br>"+err.message;
                         };
-			var code = document.createElement("pre");
-			code.innerHTML = document.documentElement.innerHTML.replace(/</g, "&lt;");
-			document.body.appendChild(code);
 		</script>
                 
                 <div style="text-align: center;">
