--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 		<script src="/lib/w3.js"></script>
-		<div w3-include-html="content.html"></div> 
+		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
 		<script>
 			w3.includeHTML();
 		</script>
