--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</style>
 	</head>
 	<body>
-		<script src="/lib/w3.js"></script>
+		<script src="https://www.w3schools.com/lib/w3.js"></script>
 		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
 		<script>
 			w3.includeHTML();
