--- a/CompSci/index.html
+++ b/CompSci/index.html
@@ -5,10 +5,7 @@
                         Magnogen - Computer science revision
                 </title>
                 <link rel="icon" href="http://magnogen.github.io/H.png">
-                <link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
-                <!-- JavaScript library which gets the nav-bar content. -->
-                <script src="/src/includehtml.js"></script>
-                
+                <link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">              
                 <style>
                         body {
                                 background-color: #222222;
@@ -28,17 +25,10 @@
                 </style>
         </head>
         <body>
-                <div w3-include-html="https://magnogen.github.io/src/navbar.html"></div>
-                <script> 
-			alert("any working JavaScript here?");
-			var code = document.createElement("pre");
-			code.innerHTML = document.documentElement.innerHTML.replace(/</g, "&lt;");
-			document.body.appendChild(code);
-			
-                        try {w3.includeHTML(nav_links_add_active); // Call-back function found in nav-bar file. 
-                        } catch(err) {
-                                document.getElementsByClassName("p")[0].innerHTML = err.name+"<br>"+err.message;
-                        };
+		<script src="https://www.w3schools.com/lib/w3.js"></script>
+		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
+		<script>
+			w3.includeHTML();
 		</script>
                 
                 <div style="text-align: center;">
