--- a/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html
+++ b/contributors/TomIsTheBestAtEverythingWhichIncludesDragons.html
@@ -27,7 +27,12 @@
 	</style>
 	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
-		<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
+		<script src="https://www.w3schools.com/lib/w3.js"></script>
+		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
+		<script>
+			w3.includeHTML();
+		</script>
+		
 		<div style="text-align: center;">
 			<h1>
 				<br>Contributors
