--- a/contributors/user-e.html
+++ b/contributors/user-e.html
@@ -6,37 +6,6 @@
 		</title>
 	</head>
 	<style>
-		body {
-			background-color: #222222;
-			color: #eeeeee;
-			font-family: Verdana, sans-serif;
-		}
-		ul {
-			list-style-type: none;
-			margin: 0;
-			padding: 0;
-			overflow: hidden;
-			background-color: #333333;
-			position: fixed;
-			top: 0;
-			width: 100%;
-		}
-		li {
-		    	float: left;
-		}
-		li a {
-		    	display: block;
-		    	color: white;
-		    	text-align: center;
-		    	padding: 14px 16px;
-		    	text-decoration: none;
-		}
-		li a:hover:not(.active) {
-		    	background-color: #111111;
-		}
-		.active {
-		    	background-color: #4CAF50;
-		}
 		.about {
 			color: lightgreen;
 		}
@@ -52,7 +21,12 @@
                 }
 	</style>
 	<body>
-		<link rel="stylesheet" type="text/html" href="https://magnogen.github.io/src/navbar.html">
+		<script src="https://www.w3schools.com/lib/w3.js"></script>
+		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
+		<script>
+			w3.includeHTML();
+		</script>
+		
 		<div style="text-align: center;">
 			<h1>
 				<br>Contributors
