--- a/src/navbar.html
+++ b/src/navbar.html
@@ -1,28 +1,19 @@
 <html>
   <ul>
     <li>
-      <a href="https://magnogen.github.io/">
+      <a class="home" href="https://magnogen.github.io/">
         Home
       </a>
     </li>
     <li>
-      <a href="https://magnogen.github.io/contributors/">
+      <a class="contrib" href="https://magnogen.github.io/contributors/">
         Contributors
       </a>
     </li>
     <li>
-      <a href="https://magnogen.github.io/edu/">
+      <a class="edu" href="https://magnogen.github.io/edu/">
         Education
       </a>
     </li>
   </ul>
-  <script>
-    function nav_links_add_active () {
-      // JavaScript call-back function, that "holds back" code
-      // to run it after the "HTML includes" JS library has loaded
-      // the nav-bar links content (this file) on a page.
-      // The small piece of code finds any navigation hyperlinks
-      // to the current page and gives them the "active" CSS style.
-    };
-  </script>
 </html>
