--- a/contributors/index.html
+++ b/contributors/index.html
@@ -11,8 +11,8 @@
   			color: #EEEEEE;
   			font-family: Verdana, sans-serif;
 		}
-		.active {
-			background-color: #0000AB
+		.contrib {
+			background-color: #4286f4;
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
