--- a/edu/index.html
+++ b/edu/index.html
@@ -25,6 +25,9 @@
 				left: 2.5em;
 				border-top: 2px solid #111111;
 			}
+			.edu {
+				background-color: #4286f4;
+			}
 		</style>
 	</head>
 	<body>
