--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -5,6 +5,7 @@
 			hydronesium - Contributors
 		</title>
 	</head>
+	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<style>
 		body {
 			background-color: #222222;
