--- a/contributors/user-e.html
+++ b/contributors/user-e.html
@@ -5,6 +5,7 @@
 			hydronesium - Contributors
 		</title>
 	</head>
+	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<style>
 		.about {
 			color: lightgreen;
