--- a/src/navbar.html
+++ b/src/navbar.html
@@ -15,5 +15,10 @@
         Education
       </a>
     </li>
+    <li>
+      <a class="download" href="https://magnogen.github.io/Downloads/">
+        Downloads
+      </a>
+    </li>
   </ul>
 </html>
