--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -12,6 +12,9 @@
   			color: #EEEEEE;
   			font-family: Verdana, sans-serif;
 		}
+		.download {
+  			background-color: ##4286f4;
+		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
