--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -13,7 +13,7 @@
   			font-family: Verdana, sans-serif;
 		}
 		.download {
-  			background-color: ##4286f4;
+  			background-color: #4286f4;
 		}
 	</style>
 	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
