--- a/edu/index.html
+++ b/edu/index.html
@@ -39,7 +39,9 @@
 		
 		<ul class="sub_menu">
   			<li>
-				<a href="https://magnogen.github.io/hydredu/Bio/">Biology</a>
+				<a href="https://magnogen.github.io/edu/bio/">
+					Biology
+				</a>
 			</li>
 		</ul>
 		
