--- a/edu/index.html
+++ b/edu/index.html
@@ -12,7 +12,8 @@
 				background-color: #222222;
 				color: #EEEEEE;
 				font-family: Verdana, sans-serif;
-			} .sub_menu {
+			}
+			.sub_menu {
 				// Sub-menu on this page.
 				list-style-type: none;
 				margin: 0;
