--- a/RennApps/index.html
+++ b/RennApps/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Renn Apps</title>
+        <title>
+		Magnogen - Renn apps
+	</title>
         <link rel="icon" href="http://magnogen.github.io/H.png">
         <style>
             body {
