--- a/edu/index.html
+++ b/edu/index.html
@@ -2,7 +2,7 @@
 <html>
   	<head>
 		<title>
-			Magnogen - hydredu
+			Magnogen - Education: Home
 		</title>
 		<link rel="icon" href="http://magnogen.github.io/H.png">
 		<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
