--- a/edu/CompSci/index.html
+++ b/edu/CompSci/index.html
@@ -2,7 +2,7 @@
 <html>
         <head>
                 <title>
-                        Magnogen - Computer science revision
+                        Magnogen - Education: Computer science
                 </title>
                 <link rel="icon" href="http://magnogen.github.io/H.png">
                 <link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">              
