Add "base" tag to index.html for relative links
Details found at <https://github.com/user-e/magnogen.github.io-code-edits/pull/12#issuecomment-349642954>.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 		<title>
 			Magnogen - Home
 		</title>
-		<link rel="icon" href="http://magnogen.github.io/H.png">
-		<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
+		<base href="https://magnogen.github.io/">
+		<link rel="icon" href="/H.png">
+		<link rel="stylesheet" type="text/css" href="/src/style.css">
 		<style>
 			body {
 				background-color: #222222;
@@ -19,7 +20,7 @@
 	</head>
 	<body>
 		<script src="https://www.w3schools.com/lib/w3.js"></script>
-		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
+		<div w3-include-html="/src/navbar.html"></div> 
 		<script>
 			w3.includeHTML();
 		</script>
