--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 			Magnogen - Home
 		</title>
 		<base href="https://magnogen.github.io/">
-		<link rel="icon" href="/H.png">
+		<link rel="icon" href="/src/logo_icon.png">
 		<link rel="stylesheet" type="text/css" href="/src/style.css">
 		<style>
 			body {
