--- a/edu/index.html
+++ b/edu/index.html
@@ -41,9 +41,10 @@
 		
 		<ul class="sub_menu">
   			<li>
-				<a href="https://magnogen.github.io/edu/bio/">
-					Biology
-				</a>
+				<a href="/edu/bio/">Biology (genetics)</a>
+			</li>
+			<li>
+				<a href="/edu/CompSci/">Computer science</a>
 			</li>
 		</ul>
 		
